--- a/src/components/Accordian/Accordian.css
+++ b/src/components/Accordian/Accordian.css
@@ -4,6 +4,22 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  flex-direction: column;
+}
+
+button {
+  margin-bottom: 20px;
+  background: #614101;
+  padding: 10px 20px;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  transition: 0.2s;
+}
+button:hover {
+  background: #333;
 }
 
 .accordian {
